Refactored .Net Core variant as a service. Cleaned up example project.

--- a/Web.FlashMessage.MvcCoreExample/Views/Shared/_Layout.cshtml
+++ b/Web.FlashMessage.MvcCoreExample/Views/Shared/_Layout.cshtml
@@ -26,14 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Web.FlashMessage.MvcCoreExample</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Home</a>
             </div>
         </div>
     </div>
@@ -42,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Web.FlashMessage.MvcCoreExample</p>
+            <p>&copy; 2017 - Vereyon</p>
         </footer>
     </div>
 
