Package both ASP.NET Core and ASP.NET versions in a single package. Bump version to 1.1.0. Update examples to use beta release of 1.1.0 package. Update documentation.

--- a/Web.FlashMessage.MvcExample/Views/Shared/_Layout.cshtml
+++ b/Web.FlashMessage.MvcExample/Views/Shared/_Layout.cshtml
@@ -30,6 +30,7 @@
         </div>
     </div>
     <div class="container body-content">
+        @Vereyon.Web.FlashMessageHtmlHelper.RenderFlashMessages(Html)
         @RenderBody()
         <hr />
         <footer>
