--- a/Web.FlashMessage.MvcExample/Views/Home/Index.cshtml
+++ b/Web.FlashMessage.MvcExample/Views/Home/Index.cshtml
@@ -6,6 +6,7 @@
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a class="btn btn-default" href="@Url.Action("TestInfo")">Test Flash Message</a></p>
 </div>
 
 <div class="row">
