Make message dismiss icon optional. Bump version to 1.2.0.

--- a/Web.FlashMessage.MvcExample/Views/Shared/_Layout.cshtml
+++ b/Web.FlashMessage.MvcExample/Views/Shared/_Layout.cshtml
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="container body-content">
-        @Vereyon.Web.FlashMessageHtmlHelper.RenderFlashMessages(Html)
+        @Vereyon.Web.FlashMessageHtmlHelper.RenderFlashMessages(Html, false)
         @RenderBody()
         <hr />
         <footer>
