Support using tag helper without closing tag. Implement dismissable messages in tag helper.

--- a/Web.FlashMessage.MvcCoreExampleLatest/Views/Home/Index.cshtml
+++ b/Web.FlashMessage.MvcCoreExampleLatest/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<flash />
+<flash dismissable="true" />
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
     <ol class="carousel-indicators">
