Work out documentation for different Bootstrap versions and update example solution

--- a/Web.FlashMessage.MvcCoreExampleLatest/Views/Shared/_Layout.cshtml
+++ b/Web.FlashMessage.MvcCoreExampleLatest/Views/Shared/_Layout.cshtml
@@ -28,8 +28,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="RedirectExample">Redirect Example</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Bootstrap3">Bootstrap 3</a></li>
                 </ul>
             </div>
         </div>
