--- a/Web.FlashMessage.MvcCoreExampleLatest/Views/Shared/_LayoutBootstrap3.cshtml
+++ b/Web.FlashMessage.MvcCoreExampleLatest/Views/Shared/_LayoutBootstrap3.cshtml
@@ -31,8 +31,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="RedirectExample">Redirect Example</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Bootstrap3">Bootstrap 3</a></li>
                 </ul>
             </div>
         </div>
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - Web.FlashMessage.MvcCoreExampleLatest</p>
+            <p>&copy; 2021 - Web.FlashMessage.MvcCoreExampleLatest</p>
         </footer>
     </div>
 
